@@ -1,3 +1,6 @@
+#ifndef ANSI_ESC_SEQ_H
+#define ANSI_ESC_SEQ_H
+
 #define ESC "\033"
 #define CSI "["
 
@@ -7,3 +10,5 @@
 #define GREEN "32"
 #define BLUE "33"
 #define BOLD ";1"
+
+#endif /* ANSI_ESC_SEQ_H */
